[tool.poetry]
name = "every-test"
version = "0.1.0"
description = ""
authors = ["Adi Wabisabi <technobabelfish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
